--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.27.2",
+    "firebase": "^9.10.0",
     "formik": "^2.2.9",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
